--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,9 @@
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node server.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "dependencies": {
     "@google/genai": "^1.30.0",
     "bcryptjs": "^3.0.3",
